--- a/client/main.html
+++ b/client/main.html
@@ -22,10 +22,22 @@
 </template>
 
 
+<template name="Contatos">
+  
+  <h1>Contato</h1>
+  <h2>Email</h2>
+  <p>gabrielcasanova328@gmail.com</p>
+  <h2>WhatsApp</h2>
+  <p>+55 (11) 99374-4012</p>
+  
+</template>
+
+
 <template name="Cabecalho">
   
   <a href="/">Inicio</a>
   <a href="/sobre">Sobre</a>
+  <a href="/contatos">Contatos</a>
   
 </template>
 
