até ep30 ainda sem heroku

--- a/client/Sobre.html
+++ b/client/Sobre.html
@@ -18,7 +18,7 @@
       <div class="col-md-6">
         <h2>Nossos valores</h2>
         <p>
-          texto...
+          Fazer os  nossos usuarios FELIZES ;)
         </p>
       </div>
     </div>
