--- a/client/Cabecalho.html
+++ b/client/Cabecalho.html
@@ -18,6 +18,7 @@
           <ul class="nav navbar-nav">
             <li><a href="/sobre">Sobre</a></li>
             <li><a href="/contatos">Contatos</a></li>
+            <li><a href="/feed">Feed</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
