--- a/client/Cabecalho.html
+++ b/client/Cabecalho.html
@@ -19,6 +19,7 @@
             <li><a href="/sobre">Sobre</a></li>
             <li><a href="/contatos">Contatos</a></li>
             <li><a href="/feed">Feed</a></li>
+            <li>{{>atNavButton}}</li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
