Id do Autor, Remover insecure, Criar métodos do Meteor, Feed só para Usuarios Cadastrados

--- a/client/Inicio.html
+++ b/client/Inicio.html
@@ -6,7 +6,7 @@
         <div class="jumbotron">
       
           <h1>Bem-vindo à Hikebook</h1>
-          <p>Acompanhe o projeto de seus amigos.</p>
+          <p>Acompanhe projetos.</p>
           <p>Compartilhe seus projetos com o mundo.</p>
           <p><a class="btn btn-primary btn-lg" href="#" role="button">Cadastre-se</a></p>
         
