--- a/client/Cabecalho.html
+++ b/client/Cabecalho.html
@@ -18,7 +18,11 @@
           <ul class="nav navbar-nav">
             <li><a href="/sobre">Sobre</a></li>
             <li><a href="/contatos">Contatos</a></li>
+
+            {{#if currentUser}}
             <li><a href="/feed">Feed</a></li>
+            {{/if}}
+
             <li>{{>atNavButton}}</li>
           </ul>
         </div><!-- /.navbar-collapse -->
