--- a/client/Feed/Post.html
+++ b/client/Feed/Post.html
@@ -5,7 +5,8 @@
       <h3 class="panel-title">{{usernameDoAutor}}</h3>
     </div>
     <div class="panel-body">
-      {{texto}}
+      <div>{{texto}}</div>
+      <button class="btn btn-default like-button">Curtir</button>
     </div>
   </div>
   
