Curtir/Descurtir Alternado

--- a/client/Feed/Feed.html
+++ b/client/Feed/Feed.html
@@ -8,6 +8,8 @@
         
         {{> NovoPost}}
         
+        <!--FAZER  Mudar Ordem Dos Post de baixo pra cima-->
+
         {{#each posts}}
           {{> Post}}  
         {{/each}}
