--- a/client/Feed/Post.html
+++ b/client/Feed/Post.html
@@ -15,6 +15,10 @@
       {{/if}}
 
       <div>{{numeroDeCurtidas}} curtidas</div>
+
+      {{#each comentarios}}
+        {{> Comentario}}
+      {{/each}}
       
       {{> NovoComentario}}
 
