--- a/client/Cabecalho/Cabecalho.html
+++ b/client/Cabecalho/Cabecalho.html
@@ -23,6 +23,10 @@
             <li><a href="/feed">Feed</a></li>
             {{/if}}
 
+            {{#if currentUser}} <!--Como muda o id aqui ?-->
+            <li><a href="/perfil/">Perfil</a></li>
+            {{/if}}
+
             <li>{{>atNavButton}}</li>
           </ul>
         </div><!-- /.navbar-collapse -->
