Pagina de perfil com seus posts e barra de pesquisa por usuarios

--- a/client/Cabecalho/Cabecalho.html
+++ b/client/Cabecalho/Cabecalho.html
@@ -24,11 +24,16 @@
             {{/if}}
 
             {{#if currentUser}} <!--Como muda o id aqui ?-->
-            <li><a href="/perfil/">Perfil</a></li>
+            <li><a hfef="" class="perfil">Perfil</a></li>
             {{/if}}
+          </ul>
 
+          {{> Pesquisa}}
+
+          <ul class="nav navbar-nav navbar-right">
             <li>{{>atNavButton}}</li>
           </ul>
+
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
     </nav>
