--- a/client/Feed/Feed.html
+++ b/client/Feed/Feed.html
@@ -16,7 +16,7 @@
         
         {{> NovoPost}}
         
-        <!--TODO-- Mudar Ordem Dos Post de baixo pra cima-->
+        <!--TODO Mudar Ordem Dos Post de baixo pra cima-->
 
         {{#each posts}}
           {{> Post}}  
