--- a/client/Perfil/Perfil.html
+++ b/client/Perfil/Perfil.html
@@ -9,9 +9,9 @@
       		</div>
 
       		<div class="col-md-6">
-
-      			{{> NovoPost}}
-
+            <!-- Se for sua conta poder fazer posts
+      			 {{> NovoPost}}
+            -->
       			{{#each posts}}
       				{{> Post}}
       			{{/each}}
