pequenas alterações no cabeçalho

--- a/client/Cabecalho/Cabecalho.html
+++ b/client/Cabecalho/Cabecalho.html
@@ -22,12 +22,14 @@
             {{#if currentUser}}
             <li><a href="/feed">Feed</a></li>
             {{/if}}
-
-            {{#if currentUser}} <!--Como muda o id aqui ?-->
-            <li><a hfef="" class="perfil">Perfil</a></li>
+            
+            <!--Como muda o id aqui ?-->
+<!--
+            {{#if currentUser}} 
+            <li><a class="perfil nav" hfef="/perfil/:id" >Perfil</a></li>
             {{/if}}
           </ul>
-
+-->
           {{> Pesquisa}}
 
           <ul class="nav navbar-nav navbar-right">
