Botão Meu Perfil Funcionando

--- a/client/Cabecalho/Cabecalho.html
+++ b/client/Cabecalho/Cabecalho.html
@@ -24,11 +24,11 @@
             {{/if}}
             
             <!--Como muda o id aqui ?-->
-<!--
+
             {{#if currentUser}} 
-            <li><a class="perfil nav" hfef="/perfil/:id" >Perfil</a></li>
+            <li><a href="/perfil/" class="perfil"> Perfil</a></li>
             {{/if}}
--->
+
           </ul>
           {{> Pesquisa}}
 
