Post e Comentario Fazio Resolvidos

--- a/client/Feed/NovoPost.html
+++ b/client/Feed/NovoPost.html
@@ -6,7 +6,7 @@
       
       <div class="panel-body">
         <div class="form-group">
-          <textarea class="form-control" rows="3" name="texto"></textarea> 
+          <textarea class="form-control" rows="3" name="texto" required></textarea> 
         </div>
       </div>
       
