--- a/client/Feed/Post.html
+++ b/client/Feed/Post.html
@@ -11,7 +11,7 @@
       {{#if usuarioCurtiu}}
       <button class="btn btn-default botao-descurtir">Descurtir</button>
       {{else}}
-      <button class="btn btn-default botao-curtir">Curtir</button>
+      <button class="btn btn-default botao-curtir btn-primary">Curtir</button>
       {{/if}}
 
       <div>{{numeroDeCurtidas}} curtidas</div>
