--- a/client/Cabecalho/Cabecalho.html
+++ b/client/Cabecalho/Cabecalho.html
@@ -26,7 +26,7 @@
             <!--Como muda o id aqui ?-->
 
             {{#if currentUser}} 
-            <li><a href="/perfil/" class="perfil"> Perfil</a></li>
+            <li><a href="#" class="perfil"> Perfil</a></li>
             {{/if}}
 
           </ul>
