--- a/client/Comentarios/Comentario.html
+++ b/client/Comentarios/Comentario.html
@@ -1,3 +1,3 @@
 <template name="Comentario">
-	<div> <b>{{usarnameDoAutor}}</b> {{texto}}</div>
+	<div> <b>{{usarnameDoAutor}} :</b> {{texto}}</div>
 </template>
