possivel postar foto

--- a/client/Feed/Post.html
+++ b/client/Feed/Post.html
@@ -5,8 +5,10 @@
       <h3 class="panel-title">{{usernameDoAutor}}</h3>
     </div>
     <div class="panel-body">
+
       <div>{{texto}}</div>
-      		<!-- AULA -->
+
+      <img src="{{imagem}}" class="img_responsive">
 
       {{#if usuarioCurtiu}}
       <button class="btn btn-default botao-descurtir">Descurtir</button>
