--- a/client/Feed/NovoPost.html
+++ b/client/Feed/NovoPost.html
@@ -8,6 +8,10 @@
         <div class="form-group">
           <textarea class="form-control" rows="3" name="texto" required></textarea> 
         </div>
+
+        <div class="form-group">
+          <input type="file" name="imagem" class="myFileInput">
+        </div>
       </div>
       
       <div class="panel-footer">
