--- a/client/Feed/Post.html
+++ b/client/Feed/Post.html
@@ -4,12 +4,14 @@
     <div class="panel-heading">
       <h3 class="panel-title">{{usernameDoAutor}}</h3>
     </div>
+
     <div class="panel-body">
-
       <div>{{texto}}</div>
+    </div>
 
-      <img src="{{imagem}}" class="img_responsive">
+    <img src="{{imagem}}" class="img-responsive">
 
+    <div class="panel-body">  
       {{#if usuarioCurtiu}}
       <button class="btn btn-default botao-descurtir">Descurtir</button>
       {{else}}
