--- a/client/Feed/Post.html
+++ b/client/Feed/Post.html
@@ -13,9 +13,16 @@
 
     <div class="panel-body">  
       {{#if usuarioCurtiu}}
-      <button class="btn btn-default botao-descurtir">Descurtir</button>
+      <i class="fa fa-heart botao-descurtir" role="button"></i>
+      <!--<button class="btn btn-default botao-descurtir">Descurtir</button>-->
       {{else}}
-      <button class="btn btn-default botao-curtir btn-primary">Curtir</button>
+      <i class="fa fa-heart-o botao-curtir" role="button"></i>
+      <!--<button class="btn btn-default botao-curtir btn-primary">Curtir</button>-->
+      {{/if}}
+
+
+      {{#if eAutor}}
+      <i class="fa fa-trash pull-right botao-remover" role="button"></i>
       {{/if}}
 
       <div>{{numeroDeCurtidas}} curtidas</div>
