--- a/client/Feed/Post.html
+++ b/client/Feed/Post.html
@@ -2,7 +2,9 @@
 
   <div class="panel panel-default">
     <div class="panel-heading">
-      <h3 class="panel-title">{{usernameDoAutor}}</h3>
+      <a href="/perfil/{{idDoAutor}}" class="link-usuario">
+        <h3 class="panel-title">{{usernameDoAutor}}</h3>
+      </a>
     </div>
 
     <div class="panel-body">
