--- a/client/Cabecalho/Cabecalho.html
+++ b/client/Cabecalho/Cabecalho.html
@@ -42,7 +42,7 @@
 
           {{#if currentUser}}
             <ul class="nav navbar-nav navbar-brand navbar-right">
-              <p>{{perfil.username}}</p>
+              <p>{{currentUser.username}}</p>
             </ul>
           {{/if}}
 
